# astr1

./: .abacus.donotdelete  .env.example  ASTRO_V1_FAZ1_FINAL_REPORT.md  ASTRO_V1_FAZ1_TEST_SCENARIOS.md  README.md  README_DEV.md  dev_assistant.py
.abacusai/: config.json
arduino/astro_firmware/: platformio.ini
arduino/astro_firmware/include/: pins.h  protocol.h
arduino/astro_firmware/src/: main.cpp
astro_faz1_fixed_review/: generated_20260610_194044_1.txt  generated_20260610_194044_2.txt  generated_20260610_194044_3.txt
astro_faz1_output/: generated_20260610_192429_1.txt  generated_20260610_192429_10.txt  generated_20260610_192429_12.txt  generated_20260610_192429_13.txt  generated_20260610_192429_14.txt  generated_20260610_192429_15.txt  generated_20260610_192429_16.txt  generated_20260610_192429_17.txt  generated_20260610_192429_18.txt  generated_20260610_192429_3.txt  generated_20260610_192429_4.txt  generated_20260610_192429_5.txt  generated_20260610_192429_6.txt  generated_20260610_192429_8.txt  generated_20260610_192429_9.txt  rapor_20260610_192429.md
ros2_ws/src/astro_ai/: package.xml  setup.cfg  setup.py
ros2_ws/src/astro_ai/astro_ai/: __init__.py  ai_brain_node.py
ros2_ws/src/astro_ai/launch/: ai.launch.py
ros2_ws/src/astro_audio/: package.xml  setup.cfg  setup.py
ros2_ws/src/astro_audio/astro_audio/: audio_capture_node.py  speech_recognition_node.py  tts_node.py
ros2_ws/src/astro_audio/config/: audio_params.yaml
ros2_ws/src/astro_audio/launch/: audio.launch.py
ros2_ws/src/astro_base/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/astro_base/src/: serial_bridge.py
ros2_ws/src/astro_bringup/: package.xml  setup.py
ros2_ws/src/astro_bringup/astro_bringup/: device_utils.py
ros2_ws/src/astro_bringup/config/: astro_params.yaml
ros2_ws/src/astro_bringup/config/udev/: 99-astro-sensors.rules
ros2_ws/src/astro_bringup/launch/: base.launch.py  bringup.launch.py  robot.launch.py  sensors.launch.py
ros2_ws/src/astro_description/: CMakeLists.txt  package.xml
ros2_ws/src/astro_description/launch/: description.launch.py
ros2_ws/src/astro_description/urdf/: astro.urdf.xacro
ros2_ws/src/astro_lidar/: package.xml  setup.cfg  setup.py
ros2_ws/src/astro_lidar/astro_lidar/: scan_filter_node.py
ros2_ws/src/astro_lidar/config/: lidar_params.yaml
ros2_ws/src/astro_lidar/launch/: lidar.launch.py
ros2_ws/src/astro_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/astro_vision/astro_vision/: face_detector_node.py  image_utils.py
ros2_ws/src/astro_vision/config/: camera_params.yaml
ros2_ws/src/astro_vision/launch/: camera.launch.py
rosidl_adapter/: CHANGELOG.rst
rosidl_buffer/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_buffer/include/rosidl_buffer/: c_helpers.h
rosidl_buffer/src/: c_helpers.cpp
rosidl_buffer/test/: test_buffer.cpp  test_c_helpers.cpp
rosidl_buffer_backend/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_buffer_backend_registry/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_buffer_py/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_cli/: CHANGELOG.rst  package.xml  setup.py
rosidl_cmake/: CHANGELOG.rst
rosidl_generator_c/: CHANGELOG.rst
rosidl_generator_cpp/: CHANGELOG.rst
rosidl_generator_cpp/resource/: msg__traits.hpp.em
rosidl_generator_tests/: CHANGELOG.rst
rosidl_generator_tests/test/rosidl_generator_cpp/: test_traits.cpp
rosidl_generator_type_description/: CHANGELOG.rst  package.xml
rosidl_parser/: CHANGELOG.rst
rosidl_pycommon/: CHANGELOG.rst  setup.py
rosidl_runtime_c/: CHANGELOG.rst  package.xml
rosidl_runtime_cpp/: CHANGELOG.rst  package.xml
rosidl_runtime_cpp/include/rosidl_runtime_cpp/: traits.hpp
rosidl_typesupport_interface/: CHANGELOG.rst
rosidl_typesupport_introspection_c/: CHANGELOG.rst  package.xml
rosidl_typesupport_introspection_cpp/: CHANGELOG.rst  package.xml
rosidl_typesupport_introspection_tests/: CHANGELOG.rst  package.xml
