<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astro_bringup</name>
  <version>1.0.0</version>
  <description>ASTRO V1 system launch files and configuration</description>
  <maintainer email="baran@example.com">Baran Eren</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>astro_base</exec_depend>
  <exec_depend>astro_lidar</exec_depend>
  <exec_depend>astro_audio</exec_depend>
  <exec_depend>astro_vision</exec_depend>
  <exec_depend>astro_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
